added: buttons, logo

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,13 @@ head, body {
 
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
+}
+
 * {box-sizing:border-box}
 
 /* Slideshow container */
@@ -97,4 +104,27 @@ head, body {
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
+}
+
+.btn-group button{
+  background-color: black;
+  border: 1em solid black;
+  color: white;
+  padding: 0;
+  float: left;
+  font-size: 75px;
+}
+
+.btn-group button:not(:last-child) {
+  border-right: none; /*preventing double border */
+}
+
+.btn-group::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.btn-group button:hover {
+  background-color: black;
 }
