--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 head, body {
     background-color: black;
     color: whitesmoke;
+    font-family: Courgette;
 
+}
+
+h1 {
+  font-size: 30em;
 }
 
 .center {
@@ -35,7 +40,7 @@ head, body {
   padding: 16px;
   color: white;
   font-weight: bold;
-  font-size: 500%;
+  font-size: 20em;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -55,7 +60,7 @@ head, body {
 /* Caption text */
 .text {
   color: #f2f2f2;
-  font-size: 15px;
+  font-size: 20em;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
@@ -63,10 +68,10 @@ head, body {
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
+/* Number text (1/4 etc) */
 .numbertext {
   color: #f2f2f2;
-  font-size: 12px;
+  font-size: 5em;
   padding: 8px 12px;
   position: absolute;
   top: 0;
@@ -75,8 +80,8 @@ head, body {
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
+  height: 5em;
+  width: 5em;
   margin: 0 2px;
   background-color: #bbb;
   border-radius: 50%;
@@ -112,7 +117,8 @@ head, body {
   color: white;
   padding: 0;
   float: left;
-  font-size: 75px;
+  font-size: 25em;
+  font-family: Courgette;
 }
 
 .btn-group button:not(:last-child) {
