--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ h1 {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 100%;
+  max-width: 100vw;
   position: relative;
   margin: auto;
 }
