--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ h1 {
 /* Number text (1/4 etc) */
 .numbertext {
   color: #f2f2f2;
-  font-size: 5em;
+  font-size: 5vw;
   padding: 8px 12px;
   position: absolute;
   top: 0;
@@ -80,8 +80,8 @@ h1 {
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
-  height: 5em;
-  width: 5em;
+  height: 5vw;
+  width: 5vw;
   margin: 0 2px;
   background-color: #bbb;
   border-radius: 50%;
@@ -117,7 +117,7 @@ h1 {
   color: white;
   padding: 0;
   float: left;
-  font-size: 25em;
+  font-size: 10vw;
   font-family: Courgette;
 }
 
