--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@ head, body {
 }
 
 h1 {
-  font-size: 4vw;
+  font-size: 6vw;
+  font-weight: bold;
 }
 
 .center {
@@ -40,7 +41,7 @@ h1 {
   padding: 16px;
   color: white;
   font-weight: bold;
-  font-size: 20em;
+  font-size: 10vw;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -60,7 +61,7 @@ h1 {
 /* Caption text */
 .text {
   color: #f2f2f2;
-  font-size: 10em;
+  font-size: 3vw;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
@@ -71,7 +72,7 @@ h1 {
 /* Number text (1/4 etc) */
 .numbertext {
   color: #f2f2f2;
-  font-size: 5vw;
+  font-size: 2vw;
   padding: 8px 12px;
   position: absolute;
   top: 0;
@@ -80,8 +81,8 @@ h1 {
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
-  height: 5vw;
-  width: 5vw;
+  height: 2vw;
+  width: 2vw;
   margin: 0 2px;
   background-color: #bbb;
   border-radius: 50%;
