added: menu, centering, and link to and from menu to homepage

--- a/css/style_menu.css
+++ b/css/style_menu.css
@@ -2,25 +2,41 @@ head, body {
     background-color: black;
     color: whitesmoke;
     font-family: Courgette;
-
-}
-
-h1 {
-  font-size: 6vw;
-  font-weight: bold;
-  
 }
 
 .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 25%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+  }
+  
+
+.list_wrapper {
+    text-align: center;
+    font-size: 2vw;
+    padding: 1vw;   
+}
+h1,h2,h3,h4,h5 {
+    text-align: center;
+}
+h1 {
+    font-size: 10vw;
+    
 }
 
-ul {
-    
+h3,h4,h5 {
     font-size: 3vw;
+}
+
+
+ul {
+    list-style: none;
+}
+
+p {
+    font-size: 4vw;
+    text-align: center;
 }
 
 .btn-group button{
