added meta tags, and backup fonts

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 head, body {
     background-color: black;
     color: whitesmoke;
-    font-family: Courgette;
+    font-family: Courgette, Arial, Helvetica, sans-serif;
 
 }
 
