--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ h1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 25%;
+  width: 40%;
 }
 
 * {box-sizing:border-box}
@@ -140,6 +140,6 @@ footer {
   text-align: center;
 }
 
-footer,h2 {
+footer {
   font-size: 4vw;
 }
