--- a/css/style_menu.css
+++ b/css/style_menu.css
@@ -18,12 +18,14 @@ head, body {
 .list_wrapper {
    text-align: center;
    font-size: 3vw;
+   margin-left: 0;
+   margin-right: 1vw;
   }
 h1,h2,h3,h4,h5 {
     text-align: center;
 }
 h1 {
-    font-size: 5vw;
+    font-size: 10vw;
     
 }
 
