--- a/css/style_menu.css
+++ b/css/style_menu.css
@@ -68,9 +68,19 @@ p {
 }
 
 footer {
+  display: inline-block;  
+  width: 100%;
   text-align: center;
+  margin: auto;
+  padding: 0;
 }
 
-footer {
-  font-size: 3vw;
+.second {
+  font-size: 4vw;
+}
+
+h6 {
+  font-size: 10vw;
+  margin: 0;
+  padding: 0;
 }
