--- a/css/style_menu.css
+++ b/css/style_menu.css
@@ -34,6 +34,8 @@ h1 {
 
 h2,h3,h4,h5 {
     font-size: 10vw;
+    margin: 0;
+    padding: 2vw;
 }
 
 p {
@@ -82,5 +84,5 @@ footer {
 h6 {
   font-size: 10vw;
   margin: 0;
-  padding: 0;
+  padding: 2vw;
 }
