--- a/css/style_about.css
+++ b/css/style_about.css
@@ -17,7 +17,7 @@ h1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 40%;
+  width: 35%;
 }
 
 h2,h3 {
@@ -32,6 +32,7 @@ h2,h3 {
 
 .info_b {
     font-size: 2vw;
+    margin-bottom: 2vw;
 }
 
 .owner {
